--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "openai>=2.21.0",
+    "python-dotenv>=1.0.1",
+    "python-telegram-bot>=21.10",
 ]
