--- a/data/projects.json
+++ b/data/projects.json
@@ -1,10 +1,11 @@
 {
   "chat_state": {
     "951291756": {
-      "current_project": "/home/user/CodingAgent-Mobile",
+      "current_project": "/home/user/Transportation-Optimization",
       "default_thread_id": null,
       "threads_by_project": {
-        "/home/user/CodingAgent-Mobile": "019c6b61-b0d9-7c70-9257-3f34d8fcf333"
+        "/home/user/CodingAgent-Mobile": "019c6b61-b0d9-7c70-9257-3f34d8fcf333",
+        "/home/user/Transportation-Optimization": "019c6bb3-ecc7-7810-9ea6-b9c9e7527715"
       }
     }
   },
@@ -12,10 +13,15 @@
     "/home/user/CodingAgent-Mobile": {
       "name": "CodingAgent-Mobile",
       "path": "/home/user/CodingAgent-Mobile"
+    },
+    "/home/user/Transportation-Optimization": {
+      "name": "Transportation-Optimization",
+      "path": "/home/user/Transportation-Optimization"
     }
   },
   "roots": [
-    "/home"
+    "/home",
+    "/home/user"
   ],
   "version": 1
 }
